--- a/.github/workflows/sitemap-generator.yml
+++ b/.github/workflows/sitemap-generator.yml
@@ -2,14 +2,13 @@ name: Generate sitemap
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 오전 9시 UTC
-    - cron: '0 12 * * *'  # 매일 오후 9시 UTC
-  workflow_dispatch:     # 수동 실행도 가능하게
+    - cron: '0 0 * * *'    # 오전 9시(UTC+9이면 9시)
+    - cron: '0 12 * * *'   # 오후 9시(UTC+9이면 21시)
+  workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -19,6 +18,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Pull latest main
+        run: git pull --rebase origin main
+
       - name: Generate sitemap.xml
         run: python sitemap_generator.py
 
@@ -27,5 +29,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add sitemap.xml
-          git commit -m "Auto-generate sitemap.xml"
+          git commit -m "Auto-generate sitemap.xml" || echo "No changes to commit"
           git push
