--- a/.github/workflows/indexnow.yml
+++ b/.github/workflows/indexnow.yml
@@ -26,7 +26,7 @@ jobs:
           fi
 
           for file in $FILES; do
-            URL="https://mahalohana-bruce.com/${file}"
+            URL="https://utilities.mahalohana-bruce.com/${file}"
             echo "🔗 Pinging: $URL"
-            curl "https://www.bing.com/indexnow?url=${URL}&key=9a4d441f03954eb89ed9bb85fe40c36c"
+            curl "https://www.bing.com/indexnow?url=${URL}&key=c3463215153b4cf686a0d8a01d3d702f"
           done
