--- a/.github/workflows/update-sitemap.yml
+++ b/.github/workflows/update-sitemap.yml
@@ -54,5 +54,5 @@ jobs:
       - name: Ping Bing/Yandex
         if: steps.check_diff.outputs.changed == 'true'
         run: |
-          curl "https://www.bing.com/indexnow?url=https://mahalohana-bruce.com/sitemap.xml&key=9a4d441f03954eb89ed9bb85fe40c36c"
-          curl "https://webmaster.yandex.com/ping?sitemap=https://mahalohana-bruce.com/sitemap.xml"
+          curl "https://www.bing.com/indexnow?url=https://utilities.mahalohana-bruce.com/sitemap.xml&key=c3463215153b4cf686a0d8a01d3d702f"
+          curl "https://webmaster.yandex.com/ping?sitemap=https://utilities.mahalohana-bruce.com/sitemap.xml"
